Updated colors in style.css

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 :root {
     --primary-color: #5a5f63;
-    --background-color: #ffee00f2;
+    --background-color: #797979;
     --sidebar-bg: #252d35;
     --text-color: #333;
     --text-light: #ecf0f1;
